@@ -1,3 +1,7 @@
+2002-06-09 Araki Ken <arakiken@users.sf.net>
+
+	* All characters in line were redrawn if it is modified even a little. fixed.
+
 2002-06-08 Araki Ken <arakiken@users.sf.net>
 
 	* Garbage could be left on the right side of screen.
